syntax = "proto3";

option go_package = "github.com/HazyCorp/govnilo;pb";

import "google/protobuf/duration.proto";

package checker.proto;

service CheckerService {
    rpc SetState(SetStateReq) returns (SetStateRsp);
    rpc GetState(GetStateReq) returns (GetStateRsp);

    rpc GetSLA(GetSLAReq) returns (GetSLAResponse);
}

message SetStateReq {
    State state = 1;
}

message SetStateRsp {
    // empty
}

message GetStateReq {
    // emtpy
}

message GetStateRsp {
    State state = 1;
}

message GetSLAReq {
  // empty
}

message GetSLAResponse {
  map<string, ServiceSLA> slas = 1;
}

message ServiceSLA {
  map<string, SLA> slas = 1;
}

message SLA {
  uint64 success_count = 1;
  uint64 total_count = 2;
}

message State {
    map<string, ServiceState> services = 1;
}

message ServiceState {
    string target = 1;
    map<string, CheckerState> checkers = 2;
    map<string, SploitState> sploits = 3;
}

message Rate {
    uint64 times = 1;
    google.protobuf.Duration per = 2;
}

message CheckerState {
    CheckState check = 1;
    GetState get = 2;
}

message CheckState {
    Rate rate = 1;
}

message GetState {
    Rate rate = 1;
}

message SploitState {
    Rate rate = 1;
}
